feat: crud sparepart
